# hr-agent

./: .cursorignore  .env.example  .gitignore  README.md  dev.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  test_api.py  test_request.json
.claude/: CLAUDE.md  settings.local.json
.taskmaster/: state.json
.taskmaster/docs/: prd.txt  slm-finetuning-prd.md
.taskmaster/tasks/: task_001.md  task_002.md  task_003.md  task_004.md  task_005.md  task_006.md  task_007.md  task_008.md  task_009.md  task_010.md  tasks.json
app/: __init__.py
app/core/: config.py
app/routers/: __init__.py
app/schemas/: __init__.py
core/: __init__.py  container.py  db_connection.py  graph.py  router.py  sql_agent.py
core/agents/: rag_agent.py  sql_agent.py
core/llm/: __init__.py  factory.py
core/routing/: router.py
data/company_docs/: 회사규정.txt
data/db_init/: init.sql
data/finetuning/: chunking_optimization_results.json  combined_train.json  rag_parameter_comparison.json  rag_train.json  (+2 more)
docs/: CONTEXT.md  PLANNING.md  ROADMAP.md
experiments/: check_python.py  exp_01_sql_generation.py  exp_02_self_correction.py  exp_03_langgraph_sql.py  exp_04_sql_agent_test.py  exp_05_document_loading.py  exp_09_router.py  exp_10_graph.py  exp_11_integration_test.py  exp_12_refactored_test.py
frontend/: app.py
notebooks/: .gitkeep  finetune_qwen3_8b.ipynb  rag_parameter_comparison.ipynb  rag_ragas_evaluation.ipynb
scripts/: build_index.py  compare_models.py  count_chars.py  prepare_dataset.py
tests/: conftest.py  test_agents.py
(+8 files in other folders)
